# uszipcode-project

./: CLAUDE.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: main.yml
uszipcode/: __init__.py  db.py  model.py  search.py  state_abbr.py
uszipcode/docs/: __init__.py
uszipcode/tests/: __init__.py
